add api category
