# app/Http/Controllers/Controller.php
@@ -5,21 +5,24 @@ namespace App\Http\Controllers;
 use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 
 /**
- *  @OA\Info(
-     * title="Mota Blog",
-     * version="1.0.0"
+ * @OA\Info(
+ * title="Mota Blog",
+ * version="1.0.0"
  *  )
  * @OA\Tag(
  *     name="Auth 🔒"
  *  ),
- *  @OA\Tag(
+ * @OA\Tag(
  *      name="Admin 👨‍💼"
  *  ),
- *  @OA\Tag(
-     *  name="Post 📃"
+ * @OA\Tag(
+ *  name="Post 📃"
  *  ),
- *  @OA\Tag(
+ * @OA\Tag(
  *      name="Contact 🤝"
+ *  ),
+ * @OA\Tag(
+ *      name="Category 🔴"
  *  )
  * */
 abstract class Controller extends \Illuminate\Routing\Controller
