# routes/Api/Category.php
@@ -1,0 +1,5 @@
+<?php
+
+use \Illuminate\Support\Facades\Route;
+
+Route::apiResource('/category', \App\Http\Controllers\Category\CategoryController::class);
