# routes/api.php
@@ -2,3 +2,4 @@
 require_once __DIR__ . '/Api/Admin.php';
 require_once __DIR__ . '/Api/Post.php';
 require_once __DIR__ . '/Api/Contact.php';
+require_once __DIR__ . '/Api/Category.php';
